--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,58 +1,58 @@
 <style>
     @font-face {
-        font-family: Equinor;
-        src: url("/fonts/Equinor-Regular.woff2") format("woff2"),
-            url("/fonts/Equinor-Regular.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-Regular.woff2") format("woff2"),
+            url("/fusion-components/Equinor-Regular.woff") format("woff");
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-Italic.woff2") format("woff2"),
-            url("../fonts/Equinor-Italic.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-Italic.woff2") format("woff2"),
+            url("/fusion-components/Equinor-Italic.woff") format("woff");
         font-style: italic;
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-Light.woff2") format("woff2"),
-            url("../fonts/Equinor-Light.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-Light.woff2") format("woff2"),
+            url("/fusion-components/Equinor-Light.woff") format("woff");
         font-weight: 200;
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-LightItalic.woff2") format("woff2"),
-            url("../fonts/Equinor-LightItalic.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-LightItalic.woff2") format("woff2"),
+            url("/fusion-components/Equinor-LightItalic.woff") format("woff");
         font-weight: 200;
         font-style: italic;
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-Bold.woff2") format("woff2"),
-            url("../fonts/Equinor-Bold.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-Bold.woff2") format("woff2"),
+            url("/fusion-components/Equinor-Bold.woff") format("woff");
         font-weight: 700;
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-BoldItalic.woff2") format("woff2"),
-            url("../fonts/Equinor-BoldItalic.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-BoldItalic.woff2") format("woff2"),
+            url("/fusion-components/Equinor-BoldItalic.woff") format("woff");
         font-weight: 700;
         font-style: italic;
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-Medium.woff2") format("woff2"),
-            url("../fonts/Equinor-Medium.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-Medium.woff2") format("woff2"),
+            url("/fusion-components/Equinor-Medium.woff") format("woff");
         font-weight: 500;
     }
 
     @font-face {
-        font-family: Equinor;
-        src: url("../fonts/Equinor-MediumItalic.woff2") format("woff2"),
-            url("../fonts/Equinor-MediumItalic.woff") format("woff");
+        font-family: Equinor-Storybook;
+        src: url("/fusion-components/Equinor-MediumItalic.woff2") format("woff2"),
+            url("/fusion-components/Equinor-MediumItalic.woff") format("woff");
         font-weight: 500;
         font-style: italic;
     }
