--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,6 +3,6 @@
         width: 100%;
         height: 100%;
         margin: 0;
-        padding: 0;
+        padding: 0 !important;
     }
 </style>
