--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,4 +5,7 @@
         margin: 0;
         padding: 0 !important;
     }
+    #docs-root{
+        padding-top: calc(var(--grid-unit) * 3px);
+    }
 </style>
