--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,6 +3,9 @@
         width: 100%;
         height: 100%;
         margin: 0;
-        padding: 0;
+        padding: 0 !important;
+    }
+    #docs-root{
+        padding-top: calc(var(--grid-unit) * 3px);
     }
 </style>
